Table "user" {
  "id" INT [pk, not null, increment]
  "username" VARCHAR(255) [not null]
  "password" VARCHAR(255) [not null]
  "email" VARCHAR(255) [not null]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

Indexes {
  username [unique]
  email [unique]
}
}

Table "user_profile" {
  "id" INT [pk, not null, increment]
  "user_id" INT [not null]
  "first_name" VARCHAR(255) [not null]
  "last_name" VARCHAR(255) [not null]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table "code" {
  "id" INT [pk, not null, increment]
  "user_id" INT [not null]
  "code" VARCHAR(255) [not null]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Ref:"user"."id" < "user_profile"."user_id"

Ref:"user"."id" < "code"."user_id"
